--- a/src/main/webapp/htmltest2/1.html
+++ b/src/main/webapp/htmltest2/1.html
@@ -27,6 +27,17 @@ p {
 	border: 1px solid black;
 	padding: 25px;	/* border와 content사이의 간격 */
 }
+
+/* h1 {
+	text-align: center;
+}
+p {
+	text-align: center;
+} */
+h1, p {
+	/* group 선택자 */
+	text-align: center;
+}
 </style>
 <script>
 	// JS주석
