--- a/src/main/webapp/htmltest2/3.html
+++ b/src/main/webapp/htmltest2/3.html
@@ -6,6 +6,13 @@
 <style>
 	div {
 		border: 1px solid gray;
+		width: 100%;
+		height: 100px;
+		background: rgb(0, 0, 0, 0.8);
+		color: rgb(255, 255, 255);
+		text-align: center;
+		font-size: 50px;
+		line-height: 100px;
 	}
 </style>
 </head>
