--- a/src/main/webapp/htmltest2/3.html
+++ b/src/main/webapp/htmltest2/3.html
@@ -7,12 +7,19 @@
 	div {
 		border: 1px solid gray;
 		width: 100%;
-		height: 100px;
+		height: 200px;
 		background: rgb(0, 0, 0, 0.8);
 		color: rgb(255, 255, 255);
 		text-align: center;
 		font-size: 50px;
-		line-height: 100px;
+		line-height: 200px;
+		text-transform: lowercase;
+		letter-spacing: 0.2em;
+	}
+	
+	ul {
+		/* list-style: none; */
+		list-style: lower-alpha;
 	}
 </style>
 </head>
@@ -21,5 +28,12 @@
 <div>
 	HTML
 </div>
+<ul>
+	<li>a</li>
+	<li>b</li>
+	<li>c</li>
+	<li>d</li>
+	<li>e</li>
+</ul>
 </body>
 </html>
