--- a/src/main/webapp/08/quiz-1.html
+++ b/src/main/webapp/08/quiz-1.html
@@ -8,6 +8,12 @@
 		#container {
 			width:350px;
 			margin:30px auto;
+			
+		}
+		#container img {
+			border: 1px solid #ccc;
+			border-radius: 100%;
+			box-shadow: 5px 5px 30px 2px #000;
 		}
 	</style>
 </head>
