--- a/src/main/webapp/08/left-top.html
+++ b/src/main/webapp/08/left-top.html
@@ -14,6 +14,7 @@
       padding:10px;  /* 네방향 패딩 10px */
     }
     #pos1{
+      /* 기본: static이다. position 변경불가 */
       position:absolute;  /* 포지셔닝 - absolute */
       left:50px;  /* 왼쪽에서 50px 떨어지게 */
       top:50px;   /* 위쪽에서 50px 떨어지게 */
