--- a/src/main/webapp/09/results/bg-3.html
+++ b/src/main/webapp/09/results/bg-3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>배경 이미지</title>
-  <style>    
+  <style>    z
     body {  
       background-image:url('images/bg2.png');  /* 문서 전체 배경 이미지 */ 
       /* Do it! 문서 전체 배경 이미지 오른쪽 상단에 고정하기 */
