--- a/src/main/webapp/09/bg-3.html
+++ b/src/main/webapp/09/bg-3.html
@@ -24,6 +24,15 @@ div {
 	background-position: right top; /* 배경 이미지를 오른쪽 상단에 위치시킴 */
 }
 /* Do it! #bg1 ~ #bg3 스타일을 사용해 배경 이미지 범위 지정하기 */
+#bg1 {
+	background-origin: padding-bax;
+}
+#bg2 {
+	background-origin: border-box;
+}
+#bg3 {
+	background-origin: content-box;
+}
 </style>
 </head>
 <body>
