--- a/src/main/webapp/13/attr-1.html
+++ b/src/main/webapp/13/attr-1.html
@@ -4,23 +4,28 @@
 <meta charset="UTF-8">
 <title>속성 선택자</title>
 <style>
-   ul {
-		 list-style:none;
-   }
-	 li {
-		 width:120px;	 
-		 display:inline-block;
-		 margin:10px;
-	 }
-		li a {
-			padding: 5px 20px;
-			font-size: 14px;
-			text-decoration: none;
-			font-weight: bold;
-		}
+ul {
+	list-style: none;
+}
 
-		/* Do it! href 속성이 있는 a 요소의 스타일 지정하기 */
+li {
+	width: 120px;
+	display: inline-block;
+	margin: 10px;
+}
 
+li a {
+	padding: 5px 20px;
+	font-size: 14px;
+	text-decoration: none;
+	font-weight: bold;
+}
+
+/* Do it! href 속성이 있는 a 요소의 스타일 지정하기 */
+a[href] {
+	background-color: chartreuse;
+		
+}
 </style>
 </head>
 
@@ -32,5 +37,5 @@
 		<li><a href="#">메뉴 3</a></li>
 		<li><a href="#">메뉴 4</a></li>
 	</ul>
-  </body>
- </html>
+</body>
+</html>
