--- a/src/main/webapp/13/attr-2.html
+++ b/src/main/webapp/13/attr-2.html
@@ -4,28 +4,44 @@
 <meta charset="UTF-8">
 <title>속성 선택자</title>
 <style>
-  ul { 
-		 list-style:none;
-  }
-	li {
-		padding: 5px 30px;
-	}
-	li a {
-		font-size: 16px;
-		text-decoration: none;
-		color:#000;
-	}
+ul {
+	list-style: none;
+}
 
-	/* Do it! target 속성 값이 _blank인 a 요소에만 스타일 지정하기 */
+li {
+	padding: 5px 30px;
+}
 
+li a {
+	font-size: 16px;
+	text-decoration: none;
+	color: #000;
+	border: 1px solid gray;
+}
+
+/* Do it! target 속성 값이 _blank인 a 요소에만 스타일 지정하기 */
+p[class] {
+	background-color: green;	
+}
+a[target="_blank"] {
+	padding-right: 30px;
+	background: url("images/newwindow.png") no-repeat right center;
+	
+}
 </style>
 </head>
 
 <body>
 	<ul>
 		<li><a href="hhttps://html.spec.whatwg.org" target="_blank">HTML</a></li>
-		<li><a href="https://www.w3.org/TR/selectors">CSS Selector Level 3</a></li>
-		<li><a href="https://www.w3.org/TR/css3-mediaqueries">미디어쿼리</a></li>		
+		<li><a href="https://www.w3.org/TR/selectors">CSS Selector
+				Level 3</a></li>
+		<li><a href="https://www.w3.org/TR/css3-mediaqueries">미디어쿼리</a></li>
 	</ul>
-  </body>
- </html>
+	<p class="first">A</p>
+	<p>A</p>
+	<p class="first">A</p>
+	<p class="second">A</p>
+	<p>A</p>
+</body>
+</html>
