--- a/src/main/webapp/13/attr-3.html
+++ b/src/main/webapp/13/attr-3.html
@@ -4,24 +4,37 @@
 <meta charset="UTF-8">
 <title>속성 선택자</title>
 <style>
-   ul { list-style:none; }
-	 li {
-		 display:inline-block;
-		 margin:10px;
-	  }
-		li a {
-			padding: 5px 20px;
-			font-size: 14px;
-			color: blue;
-			text-decoration: none;
-		}
-		.flat {
-      background:#eee;
-      border:1px solid #222;
-		}
+ul {
+	list-style: none;
+}
 
-		/* Do it! class 속성 값에 button이 포함된 요소에 스타일 지정하기 */
+li {
+	display: inline-block;
+	margin: 10px;
+}
 
+li a {
+	padding: 5px 20px;
+	font-size: 14px;
+	color: blue;
+	text-decoration: none;
+}
+
+.flat {
+	background: #eee;
+	border: 1px solid #222;
+}
+
+/* Do it! class 속성 값에 button이 포함된 요소에 스타일 지정하기 */
+/* ~= : 단어가 같으면 선택 */
+[class~="button"] {
+	box-shadow: rgba(0,0,0,0.4) 4px 4px;
+}
+span {
+	background: #eee;
+	border: 1px solid #222;
+	padding: 20px;
+}
 </style>
 </head>
 <body>
@@ -29,7 +42,8 @@
 		<li><a href="#" class="flat">메뉴 1</a></li>
 		<li><a href="#" class="flat">메뉴 2</a></li>
 		<li><a href="#" class="button">메뉴 3</a></li>
-		<li><a href="#" class="flat button" >메뉴 4</a></li>
+		<li><a href="#" class="flat button">메뉴 4</a></li>
 	</ul>
-  </body>
- </html>
+	<span class="button">AA</span>
+</body>
+</html>
