--- a/src/main/webapp/13/attr-4.html
+++ b/src/main/webapp/13/attr-4.html
@@ -4,29 +4,35 @@
 <meta charset="UTF-8">
 <title>속성 선택자</title>
 <style>
-   ul { list-style:none; }
-	 li {
-		 display:inline-block;
-		 margin:10px;
-	 }
-		li a {
-			padding: 5px 20px;
-			font-size: 14px;
-			color: blue;
-			text-decoration: none;
-		}
+ul {
+	list-style: none;
+}
 
-		/* Do it! 속성 값의 시작 부분이 일치하는 요소에라 스타일 지정하기 */
+li {
+	display: inline-block;
+	margin: 10px;
+}
 
+li a {
+	padding: 5px 20px;
+	font-size: 14px;
+	color: blue;
+	text-decoration: none;
+}
+
+/* Do it! 속성 값의 시작 부분이 일치하는 요소에라 스타일 지정하기 */
+a[title|="us"] {
+	background: url("images/us.png") no-repeat left center;
+}
 </style>
 </head>
 
 <body>
 	<ul>
-		<li>외국어 서비스 : </li>
+		<li>외국어 서비스 :</li>
 		<li><a href="#" title="us-english">영어</a></li>
 		<li><a href="#" title="ja">일본어</a></li>
 		<li><a href="#" title="chn">중국어</a></li>
 	</ul>
 </body>
- </html>
+</html>
