--- a/src/main/webapp/13/attr-5.html
+++ b/src/main/webapp/13/attr-5.html
@@ -19,6 +19,15 @@
 		}
 
 		/* Do it! 속성 값의 시작 부분이 일치하는 요소에 스타일 지정하기 */
+		a[title^="en"] {
+			background: url("images/us.png") no-repeat left center;
+		}
+		a[title^="ja"] {
+			background: url("images/jp.png") no-repeat left center;
+		}
+		a[title^="ch"] {
+			background: url("images/ch.png") no-repeat left center;
+		}
 
 </style>
 </head>
