--- a/src/main/webapp/13/navi.html
+++ b/src/main/webapp/13/navi.html
@@ -4,42 +4,59 @@
 <meta charset="UTF-8">
 <title>link 스타일</title>
 <style>
-  .container {
-    width: 960px;
-    margin : 0 auto;
-  }
-  .navi{
-    width:960px;
-    height:60px;
-    padding-bottom:10px;
-    border-bottom:2px solid #ccc;
-  }
-  .navi ul{
-    list-style: none;
-    padding-top:10px; 
-    padding-bottom:5px;
-  }
-  .navi ul li {
-    float:left;
-    width:150px;
-    padding:10px;   
-  }
+.container {
+	width: 960px;
+	margin: 0 auto;
+}
 
-  /* Do it! 가상 선택자를 사용해 링크 스타일 지정하기 */
+.navi {
+	width: 960px;
+	height: 60px;
+	padding-bottom: 10px;
+	border-bottom: 2px solid #ccc;
+}
 
+.navi ul {
+	list-style: none;
+	padding-top: 10px;
+	padding-bottom: 5px;
+}
+
+.navi ul li {
+	float: left;
+	width: 150px;
+	padding: 10px;
+}
+
+/* Do it! 가상 선택자를 사용해 링크 스타일 지정하기 */
+.navi a:link {
+	color: red;
+}
+.navi a:visited {
+	color: green;
+}
+.navi a:hover {
+	color: aqua;
+}
+.navi a:focus {
+	color: black;
+}
+.navi a:active {
+	border: 10px solid pink;
+}
 </style>
 </head>
 
 <body>
-<div class="container">
-    <nav class="navi">
-      <ul>
-        <li><a href="#">이용 안내</a></li>
-        <li><a href="#">객실 소개</a></li>
-        <li><a href="#">예약 방법 및 요금</a></li>
-        <li><a href="#">예약하기</a></li>
-      </ul>
-    </nav>  
-  </div>
+	<div class="container">
+		<nav class="navi">
+			<ul>
+				<li><a href="attr-1.html">이용 안내</a></li>
+				<li><a href="attr-2.html">객실 소개</a></li>
+				<li><a href="attr-3.html">예약 방법 및 요금</a></li>
+				<li><a href="attr-4.html">예약하기</a></li>
+			</ul>
+		</nav>
+	</div>
 </body>
 </html>
