--- a/src/main/webapp/14/scale.html
+++ b/src/main/webapp/14/scale.html
@@ -1,41 +1,51 @@
 ﻿<!DOCTYPE html>
 <html lang="ko">
-	<head>
-		<meta charset="UTF-8">
-		<title>Transform:scale</title>
-    <style>
-			#container{
-				width:600px;
-				margin:20px auto;
-			}
-			.origin {
-				width: 100px;
-				height: 100px;
-				border: 1px solid black;
-				float: left;
-				margin: 40px;
-			}
-			.origin > div {				
-				width:100px;
-				height:100px;
-				background-color:orange;
-			}
+<head>
+<meta charset="UTF-8">
+<title>Transform:scale</title>
+<style>
+#container {
+	width: 600px;
+	margin: 20px auto;
+}
 
-      /* Do it! scale 함수로 확대,축소하기 */
+.origin {
+	width: 100px;
+	height: 100px;
+	border: 1px solid black;
+	float: left;
+	margin: 40px;
+}
 
-		</style>
-	</head>
-	<body>
-		<div id="container">		
-			<div class="origin">
-				<div id="scalex"></div>
-			</div>
-			<div class="origin">
-				<div id="scaley"></div>
-			</div>
-			<div class="origin">
-				<div id="scale"></div>
-			</div>
-		</div>		
-	</body>
+.origin>div {
+	width: 100px;
+	height: 100px;
+	background-color: orange;
+}
+
+/* Do it! scale 함수로 확대,축소하기 */
+#scalex:hover {
+	transform: scaleX(2);
+}
+#scaley:hover {
+	transform: scaley(2);
+}
+#scalexy:hover {
+	transform: scale(2);
+}
+</style>
+</head>
+<body>
+	<div id="container">
+		<div class="origin">
+			<div id="scalex"></div>
+		</div>
+		<div class="origin">
+			<div id="scaley"></div>
+		</div>
+		<div class="origin">
+			<div id="scale"></div>
+		</div>
+	</div>
+</body>
 </html>
