--- a/src/main/webapp/11/flex-1.html
+++ b/src/main/webapp/11/flex-1.html
@@ -28,9 +28,26 @@
       text-align: center;
       font-weight: bold;
     }
-    
+    .container {
+  		width: 700px;
+  		display: flex;
+  		background-color: #eee;
+  		border: 1px solid #222;
+  		margin-bottom: 30px;
+  	}
     /* Do it! 주축의 방향을 지정하는 #opt1 ~ #opt4 스타일 만들기 */
-  
+  	#opt1 {
+  		flex-direction: row;
+  	}
+  	#opt2 {
+  		flex-direction: column;
+  	}
+  	#opt3 {
+  		flex-direction: row-reverse;
+  	}
+  	#opt4 {
+  		flex-direction: column-reverse;
+  	}
   </style>
 </head>
 <body>
