--- a/src/main/webapp/12_grid/grid-2.html
+++ b/src/main/webapp/12_grid/grid-2.html
@@ -8,7 +8,9 @@
       /* Do it! grid-auto-rows 속성 지정하기 */
       .container {
         display:grid;
-        grid-template-columns: 100px 200px 300px;        
+        /* grid-template-columns: 100px 200px 300px; */        
+        /* grid-template-columns: 1fr 2fr 3fr; */
+        grid-template-columns:repeat(3, 1fr);
       }
       
       .items{
