--- a/src/main/webapp/12_grid/grid-6.html
+++ b/src/main/webapp/12_grid/grid-6.html
@@ -7,6 +7,9 @@
     <style>      
       .container{
         width:700px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(3, 100px);
       }
       .box{
         padding:15px;
@@ -16,18 +19,26 @@
       /* Do it! 그리드 라인을 사용해 배치하기 */
       .box1 {
         background-color:#3689ff;
+        grid-column: 1/4;
       }
       .box2 {
         background-color:#00cf12;
+        grid-row: 2/4;
       }
       .box3 {
         background-color:#ff9019;
+        grid-column: 2/4;     
+        grid-row-start: 2;   
         }
       .box4 {
         background-color:#ffd000;
+        grid-column-start: 3;
+        grid-row-start: 3;
       }
       .box5 {
         background-color:#ff3f3f;
+        grid-row: 5;
+        grid-column: 1/5;
       }
     </style>
   </head>
