--- a/src/main/webapp/00_js/4Function.html
+++ b/src/main/webapp/00_js/4Function.html
@@ -120,7 +120,7 @@
 		이벤트핸들러: 
 	*/
 	function f_h1() {
-			document.querySelector("#demo").innerHTML += "<br>" + "onmouseover";
+			document.querySelector("#demo").innerHTML += "<br>" + "onmouseover"
 		}
   </script>
   <link rel="stylesheet" href="/classMaterials/08/css/position-2.css"/>
