--- a/src/main/webapp/00_js/5Event.html
+++ b/src/main/webapp/00_js/5Event.html
@@ -3,8 +3,29 @@
 <head>
 <meta charset="UTF-8">
 <title>Insert title here</title>
+<script>
+	window.onload = function() {
+		var btn1 = document.querySelector("#btn1");
+		var btn2 = document.querySelector("button:nth-of-type(2)");
+		var btn3 = document.querySelector("button:nth-of-type(3)");
+		// 버튼의 이벤트 속성에 callback함수를 넣는다.
+		// 버튼을 누르면 함수를 부른다.
+		btn1.onclick = f_call;
+		btn2.onclick = f_call;
+		btn3.onclick = f_call;
+	};
+	function f_call() {
+		document.querySelector("#here").innerHTML = this + "<br>" + this.innerHTML;
+	}
+
+</script>
 </head>
 <body>
-
+<h1>이벤트 연습</h1>
+<button id="btn1">이벤트 handler넣기1</button>
+<button id="btn2">이벤트 handler넣기2</button>
+<button>이벤트 handler넣기3</button>
+<hr>
+<div id="here"></div>
 </body>
 </html>
