--- a/src/main/webapp/00_js/7DOM.html
+++ b/src/main/webapp/00_js/7DOM.html
@@ -12,6 +12,7 @@
 <script
 	src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script>
+// 이벤트모델 : DOM1(inline방식: 추천안함, 고전방식: 추천함), DOM2(IE: 추천안함, 표준모델: 추천함)
 	window.onload = f_initial;
 	function f_initial() {
 		//객체찾기 
@@ -19,29 +20,93 @@
 		var btn2 = document.querySelector(".mygroup1 button:nth-child(2)");
 		var btn3 = document.querySelector(".mygroup1 button:nth-child(3)");
 		var radios = document.querySelectorAll('[name="inlineRadioOptions"]');
-
+		
+		
 		//객체의 이벤트(속성)와 이벤트핸들러(함수)를 연결
 		btn1.onclick = f1;
 		btn2.onclick = f2;
 		btn3.onclick = f3;
-
-		for (let i = 0; i < radios.length; i++) {
-			console.log(radios[i].checked, radios[i].value);
+	    /* window.onclick = function(aa){
+	    	var xx = aa.pageX;
+			var yy = aa.pageY;
+			document.querySelector(".here_position").innerHTML = `
+			   x=${xx}, y= ${yy}
+			`;
+	    }; */
+		      
+			
+		for(let i=0;i<radios.length;i++){
+			//console.log(radios[i].checked, radios[i].value);
+			radios[i].onclick = f4;
 		}
-
+		
 	}
-	function f1() {
+	
+	
+	
+	function f4(){
+		//here안에 이미지가 있으면 img의 src속성 변경하기 
+		
+		
+		//없으면 이미지 추가하기 
+		var obj = document.querySelector(".here img");
+		if(obj == null){
+			f2();
+			alert("이미지초기화");
+			return;
+		}
+		
+		var host = location.origin; //http://localhost:9090
+		var path = location.pathname; // /appleShop/00_js/7DOM.html
+		path = path.substr(0, path.indexOf("/", 1))
+ 		//수정
+		if(this.value === 'option1'){
+			obj.src = `${host}${path}/08_boxModel/images/bear.jpg`;
+		}else{
+			obj.src = `${host}${path}/08_boxModel/images/photo.jpg`;
+		}
+	}
+	
+	
+	function f1(aa) {
 		document.querySelector(".here").innerHTML = `<h1>찾음</h1>`;
+		var ee = aa || window.event;
+		ee.stopPropagation();
+		
 	}
-	function f2() {
+	function f2(aa) {
 		var host = location.origin; //http://localhost:9090
 		var path = location.pathname; // /appleShop/00_js/7DOM.html
 		path = path.substr(0, path.indexOf("/", 1))
 		//http://localhost:9090/appleShop
-		document.querySelector(".here").innerHTML = `<img src="${host}${path}/06_css/images/cat.jpg" alt="고양이"> `;
+		document.querySelector(".here").innerHTML = 
+			`<img src="${host}${path}/06_css/images/cat.jpg" alt="고양이"> `;
+			
+		var img = document.querySelector(".here img");	
+		img.onclick = f_image;
+		
+		var ee = aa || window.event;
+		ee.stopPropagation();
+		
 	}
-	function f3() {
-
+	function f_image(aa) {
+		//event : window의 event속성을 사용함 
+		//aa는 img의 onclick의 사건 발생시 정보 
+		var xx = aa.pageX;
+		var yy = aa.pageY;
+		var src = this.src;
+		document.querySelector(".here_position").innerHTML = `
+		   x=${xx}, y= ${yy} 이미지경로=${src}
+		`;
+		alert("이미지 클릭");
+		// 이벤트 전달 막기: 자식의 이벤트가 발생하면 부모의 이벤트로 전달된다.
+		aa.stopPropagation();
+	}
+	
+	function f3(){
+		// 이벤트 강제호출
+		var btn2 = document.querySelector(".mygroup1 button:nth-child(2)");
+		btn2.onclick();
 	}
 </script>
 
@@ -77,6 +142,7 @@
 					</div>
 				</div>
 				<div class="p-3 here">여기</div>
+				<div class="p-3 here_position">위치</div>
 			</div>
 		</div>
 	</div>
