--- a/src/main/webapp/00_js4_ajax/07-13.html
+++ b/src/main/webapp/00_js4_ajax/07-13.html
@@ -6,9 +6,9 @@
 <script type="text/javascript" src="https://code.jquery.com/jquery-3.1.0.js"></script>
 <script type="text/javascript">
 $(document).ready(function() {
-    $("#span:nth-of-type(1)").css("color", "red");
-    $("첫번째child인 span").css("font-size", "20pt");
-    $("처음으로 나오는 span" ).css("background-color", "yellow");
+    $("span").eq(0).css("color", "red");
+    $("span:nth-child(1)").css("font-size", "20pt");
+    $("span:nth-of-type(1)" ).css("background-color", "yellow");
 });
 </script>
 </head>
