--- a/src/main/webapp/00_js4_ajax/07-14.html
+++ b/src/main/webapp/00_js4_ajax/07-14.html
@@ -12,7 +12,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
     $("5의 배수인 tr").css("background-color", "aqua");
-    $("짝수번째 tr").css("font-weight", "bold");
+    $("tr:nth-of-type(even)").css("font-weight", "bold");
 });
 </script>
 </head>
